--- a/RPBD_Shutov_Lab1_/appsettings.json
+++ b/RPBD_Shutov_Lab1_/appsettings.json
@@ -1,11 +1,11 @@
 ﻿{
   "PostgreSQL": {
-    "connection": "pgql"
+    "connection": "User ID=postgres;Password=password;Host=localhost;Port=5432;Database=own;"
   },
   "SQL Server": {
-
+    "connection": "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword;"
   },
   "SQLite": {
-
+    "connection": "Data Source=D:\\sqlthis.db;Version=3;"
   }
 }
